--- a/src/main/webapp/styles/standard.css
+++ b/src/main/webapp/styles/standard.css
@@ -268,6 +268,10 @@ table thead {
 table a:link {color: #303030;}
 
 .utilbox {width: 18px;}
+.namebox {
+	width: 50px;
+	text-align: right;
+}
 
 caption {
 	caption-side: top;
@@ -370,4 +374,8 @@ fieldset th {
 .flag {
 	height: 11px;
 	width: 16px;
+}
+
+.tWireless{
+	border: 0px;
 }
