--- a/src/main/webapp/styles/standard.css
+++ b/src/main/webapp/styles/standard.css
@@ -90,8 +90,8 @@ body {
 	border-top:1px solid #999999;
 }
 
-#footer .new {
-	float:left;
+.new {
+	float:right;
 }
 
 #footer a:link {color: #7db223;}
