--- a/src/main/webapp/WEB-INF/views/public/list.jspx
+++ b/src/main/webapp/WEB-INF/views/public/list.jspx
@@ -3,13 +3,10 @@
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
     <page:contentlist id="pl_com_aeiou_bigbang_domain_Content" items="${contents}" z="hnfyfk7YNdTBdBza4/mViLT4aos=">
-        <table:contentbox data="${contents}" id="l_com_aeiou_bigbang_domain_Content" path="/contents" z="lLVLIzUb5uufSIaV72f5pNvyScI=">
+        <table:contentbox data="${contents}" id="l_com_aeiou_bigbang_domain_Content" path="/contents" hidePublisher="true" z="lLVLIzUb5uufSIaV72f5pNvyScI=">
             <table:column id="c_com_aeiou_bigbang_domain_Content_title" property="title" z="Z6LmPaWuIzqPFouyBljbtjoIXaQ="/>
-            <table:column id="c_com_aeiou_bigbang_domain_Content_sourceURL" property="sourceURL" z="s58Apv8PkSRyKzF8JLn0IqIrTNc="/>
-            <table:column id="c_com_aeiou_bigbang_domain_Content_conentCache" property="conentCache" z="sAVFtEgMHZWvr7+XXfV96xRXMC0="/>
-            <table:column id="c_com_aeiou_bigbang_domain_Content_tags" property="tags" z="kDjPyZY8s59nSnA4ASrIOJGmeps="/>
-            <table:column id="c_com_aeiou_bigbang_domain_Content_publisher" property="publisher" z="JoA6rckfK+Yqfnqa1ScNuIgPZBg="/>
             <table:column id="c_com_aeiou_bigbang_domain_Content_commonBigTag" property="commonBigTag" z="054H0l7u1U7D14UvHgTdwqh3sy4="/>
+            <table:column id="c_com_aeiou_bigbang_domain_Content_tags" property="tags" z="kDjPyZY8s59nSnA4ASrIOJGmeps="/>
         </table:contentbox>
     </page:contentlist>
 </div>
