now we support chinese or japanese (any language) as publisher or space owner.

--- a/src/main/webapp/WEB-INF/layouts/default.jspx
+++ b/src/main/webapp/WEB-INF/layouts/default.jspx
@@ -12,7 +12,7 @@
 		<util:load-scripts />
 		
 		<spring:message code="application_name" var="app_name" htmlEscape="false"/>
-		<title><spring:message code="welcome_h3" arguments="${app_name}" /></title>
+		<title><spring:message code="welcome_h3"/></title>
 	</head>
 	
   	<body class="tundra spring">
