--- a/src/main/webapp/WEB-INF/views/bigtags/update.jspx
+++ b/src/main/webapp/WEB-INF/views/bigtags/update.jspx
@@ -5,5 +5,6 @@
     <form:update id="fu_com_aeiou_bigbang_domain_BigTag" modelAttribute="bigTag" path="/bigtags" versionField="Version" z="jjw22U1fyO50INP4bGYFET1bcKM=">
         <field:input field="tagName" id="c_com_aeiou_bigbang_domain_BigTag_tagName" min="2" required="true" z="5Ze3zc5yJhjLP+lXmg2mQPNTYdc="/>
         <field:input field="type" id="c_com_aeiou_bigbang_domain_BigTag_type" min="2" required="true" z="i5pbNZdQACWxPbWZSvKltv3CLmQ="/>
+        <field:input field="authority" id="c_com_aeiou_bigbang_domain_BigTag_authority" validationMessageCode="field_invalid_integer" z="Rn/Hq/wpLmkl7RpvXtybZFQoBvE="/>
     </form:update>
 </div>
