--- a/src/main/webapp/WEB-INF/views/contents/update.jspx
+++ b/src/main/webapp/WEB-INF/views/contents/update.jspx
@@ -9,5 +9,6 @@
         <field:select field="tags" id="c_com_aeiou_bigbang_domain_Content_tags" itemValue="id" items="${bigtags}" multiple="true" path="/bigtags" z="vhnvJ8gYKgpFbCdt4OPaots33K4="/>
         <field:input field="conentCache" id="c_com_aeiou_bigbang_domain_Content_conentCache" z="ciDeWotB2rtkeuHe5Esur9HePRc="/>
         <field:input field="publisher" id="c_com_aeiou_bigbang_domain_Content_publisher" required="true" z="user-managed"/>
+        <field:input field="authority" id="c_com_aeiou_bigbang_domain_Content_authority" validationMessageCode="field_invalid_integer" z="13lgct4/IuNNNQhfERdHcr1QQ4A="/>
     </form:update>
 </div>
