changed the uncommontag into single select.

--- a/src/main/webapp/WEB-INF/views/contents/create.jspx
+++ b/src/main/webapp/WEB-INF/views/contents/create.jspx
@@ -9,10 +9,10 @@
                     <field:input field="title" id="c_com_aeiou_bigbang_domain_Content_title" required="true" z="KykRIB9kokqjzUlWGTykm0UCgVk="/>
                     <field:input field="sourceURL" id="c_com_aeiou_bigbang_domain_Content_sourceURL" required="true" z="Hk2QDdFCnal0PPA/nrv6B/Kw28U="/>
                     <field:select field="commonBigTag" id="c_com_aeiou_bigbang_domain_Content_commonBigTag" itemValue="id" items="${bigtags}" path="/bigtags" z="WKNnUnIysaWMajTikzigpbQOZYE="/>
-                    <field:selectPriTag field="tags" id="c_com_aeiou_bigbang_domain_Content_tags" itemValue="id" items="${mytags}" multiple="true" path="/bigtags" z="user-managed"/>
+                    <field:selectPriTag field="uncommonBigTag" id="c_com_aeiou_bigbang_domain_Content_uncommonBigTag" itemValue="id" items="${mytags}" path="/bigtags" z="+1fym4sLPc5Rv+WdzBUh77Nrliw="/>
+                    <field:input field="authority" id="c_com_aeiou_bigbang_domain_Content_authority" validationMessageCode="field_invalid_integer" z="13lgct4/IuNNNQhfERdHcr1QQ4A="/>
                     <field:textarea field="conentCache" id="c_com_aeiou_bigbang_domain_Content_conentCache" z="user-managed"/>
                     <field:select field="publisher" id="c_com_aeiou_bigbang_domain_Content_publisher" itemValue="id" items="${useraccounts}" path="/useraccounts" required="true" z="K9RgD0iIpWMOvR2WiE3Lm7LaX5I="/>
-                    <field:input field="authority" id="c_com_aeiou_bigbang_domain_Content_authority" validationMessageCode="field_invalid_integer" z="13lgct4/IuNNNQhfERdHcr1QQ4A="/>
                 </form:create>
                 <form:dependency dependencies="${dependencies}" id="d_com_aeiou_bigbang_domain_Content" render="${not empty dependencies}" z="OIaGm9/s9pNT5CEMnSapCWMx+DY="/>
             </td>
