--- a/src/main/webapp/WEB-INF/views/contents/update.jspx
+++ b/src/main/webapp/WEB-INF/views/contents/update.jspx
@@ -6,9 +6,9 @@
         <field:input field="sourceURL" id="c_com_aeiou_bigbang_domain_Content_sourceURL" required="true" z="Hk2QDdFCnal0PPA/nrv6B/Kw28U="/>
         <field:input field="title" id="c_com_aeiou_bigbang_domain_Content_title" required="true" z="KykRIB9kokqjzUlWGTykm0UCgVk="/>
         <field:select field="commonBigTag" id="c_com_aeiou_bigbang_domain_Content_commonBigTag" itemValue="id" items="${bigtags}" path="/bigtags" z="WKNnUnIysaWMajTikzigpbQOZYE="/>
-        <field:select field="tags" id="c_com_aeiou_bigbang_domain_Content_tags" itemValue="id" items="${bigtags}" multiple="true" path="/bigtags" z="vhnvJ8gYKgpFbCdt4OPaots33K4="/>
         <field:input field="conentCache" id="c_com_aeiou_bigbang_domain_Content_conentCache" z="ciDeWotB2rtkeuHe5Esur9HePRc="/>
         <field:input field="publisher" id="c_com_aeiou_bigbang_domain_Content_publisher" required="true" z="user-managed"/>
         <field:input field="authority" id="c_com_aeiou_bigbang_domain_Content_authority" validationMessageCode="field_invalid_integer" z="13lgct4/IuNNNQhfERdHcr1QQ4A="/>
+        <field:select field="uncommonBigTag" id="c_com_aeiou_bigbang_domain_Content_uncommonBigTag" itemValue="id" items="${bigtags}" path="/bigtags" z="+1fym4sLPc5Rv+WdzBUh77Nrliw="/>
     </form:update>
 </div>
