before change Short back to int

--- a/src/main/webapp/WEB-INF/views/bigtags/create.jspx
+++ b/src/main/webapp/WEB-INF/views/bigtags/create.jspx
@@ -7,6 +7,8 @@
         <c:if test="${bigTag[id]}">
             <field:input field="type" id="c_com_aeiou_bigbang_domain_BigTag_type" min="2" required="true" z="i5pbNZdQACWxPbWZSvKltv3CLmQ="/>
         </c:if>
+        <!-- <field:input field="authority" id="c_com_aeiou_bigbang_domain_BigTag_authority" validationMessageCode="field_invalid_integer" z="Rn/Hq/wpLmkl7RpvXtybZFQoBvE="/> -->
+        <field:select field="authority" id="c_com_aeiou_bigbang_domain_Content_authority" itemValue="id" items="${authorities}" path="/bigtags" z="WKNnUnIysaWMajTikzigpbQOZYE="/>
         <field:input field="authority" id="c_com_aeiou_bigbang_domain_BigTag_authority" validationMessageCode="field_invalid_integer" z="Rn/Hq/wpLmkl7RpvXtybZFQoBvE="/>
     </form:create>
     <form:dependency dependencies="${dependencies}" id="d_com_aeiou_bigbang_domain_BigTag" render="${not empty dependencies}" z="wISMMVuzBPo3gS3UVlYC60m4tfU="/>
