--- a/src/main/webapp/WEB-INF/views/header.jspx
+++ b/src/main/webapp/WEB-INF/views/header.jspx
@@ -1,7 +1,45 @@
-<div id="header" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:fn="http://java.sun.com/jsp/jstl/functions" xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:spring="http://www.springframework.org/tags" version="2.0">
+<div id="header" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:fn="http://java.sun.com/jsp/jstl/functions"
+ xmlns:c="http://java.sun.com/jsp/jstl/core" xmlns:spring="http://www.springframework.org/tags" 
+ xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" version="2.0">
   <jsp:directive.page contentType="text/html;charset=UTF-8" />
   <jsp:output omit-xml-declaration="yes" />
 
+  <spring:url value="/" var="home"/>
+  <span>
+    <a href="${home}">
+      <spring:message code="button_home"/>
+    </a>
+  </span>
+  <c:choose>
+     <c:when test="${pageContext['request'].userPrincipal != null}">
+     	<c:out value=" | "/>
+	    <span>
+	      <spring:url value="/resources/j_spring_security_logout" var="logout"/>
+	      <a href="${logout}">
+	        <spring:message code="security_logout"/>
+	      </a>
+	    </span>
+     </c:when>
+     <c:otherwise>
+       	<c:out value=" | "/>
+	    <span>
+	      <spring:url value="/login" var="login"/>
+	      <a href="${login}">
+	        <spring:message code="security_login"/>
+	      </a>
+	    </span>
+     </c:otherwise>
+  </c:choose>
+  <util:theme/>
+
+  <spring:url value="/resources/images/springsource-logo.png" var="logo"/>
+  <spring:message code="global_sponsored" htmlEscape="false" var="sponsored"/>
+  <span>
+    <a href="http://springsource.com" title="${fn:escapeXml(sponsored)}">
+      <img align="right" alt="${fn:escapeXml(sponsored)}" src="${logo}"/>
+    </a>
+  </span>
+  
   <spring:url var="banner" value="/resources/images/banner-graphic.png" />
   <spring:url var="home" value="/" />
   <spring:message code="button_home" var="home_label" htmlEscape="false" />
