--- a/src/main/webapp/WEB-INF/views/login.jspx
+++ b/src/main/webapp/WEB-INF/views/login.jspx
@@ -1,6 +1,7 @@
 <div xmlns:spring="http://www.springframework.org/tags" xmlns:fn="http://java.sun.com/jsp/jstl/functions" 
 	xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" xmlns:c="http://java.sun.com/jsp/jstl/core" 
-	xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:form="urn:jsptagdir:/WEB-INF/tags/form" version="2.0">
+	xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:form="urn:jsptagdir:/WEB-INF/tags/form"
+	xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" version="2.0">
   <jsp:directive.page contentType="text/html;charset=UTF-8" />
   <jsp:output omit-xml-declaration="yes" />
   <spring:message code="security_login_title" var="title" htmlEscape="false" />
@@ -23,7 +24,7 @@
 	      </p>
 	    </c:if>
 	    <spring:url value="/resources/j_spring_security_check" var="form_url" />
-	    <form name="f" action="${fn:escapeXml(form_url)}" method="POST">
+	    <form name="f" modelAttribute="${login}" action="${fn:escapeXml(form_url)}" method="POST">
 	      <div>
 	        <label for="j_username">
 	          <spring:message code="security_login_form_name" />
@@ -43,6 +44,9 @@
 	          <spring:message code="security_login_form_password" />
 	        </label>
 	        <input id="j_password" type='password' name='j_password' style="width:150px" />
+	        
+	        <checkbox id="j_rememberme"/>
+	        
 	        <spring:message code="security_login_form_password_message" var="pwd_msg" htmlEscape="false" />
 	        <script type="text/javascript">
 	          <c:set var="sec_pwd_msg">
