--- a/src/main/webapp/WEB-INF/views/useraccounts/show.jspx
+++ b/src/main/webapp/WEB-INF/views/useraccounts/show.jspx
@@ -2,7 +2,7 @@
 <div xmlns:field="urn:jsptagdir:/WEB-INF/tags/form/fields" xmlns:jsp="http://java.sun.com/JSP/Page" xmlns:page="urn:jsptagdir:/WEB-INF/tags/form" version="2.0">
     <jsp:directive.page contentType="text/html;charset=UTF-8"/>
     <jsp:output omit-xml-declaration="yes"/>
-    <page:Bigshow id="ps_com_aeiou_bigbang_domain_UserAccount" object="${useraccount}" path="/useraccounts" z="NXhK+GXUKZoC47sR4lK3m4WTv+E=">
+    <page:Bigshow id="ps_com_aeiou_bigbang_domain_UserAccount" object="${useraccount}" path="/useraccounts" z="user-managed">
         <field:display field="name" id="s_com_aeiou_bigbang_domain_UserAccount_name" object="${useraccount}" z="sZ0pvaHkqnS6MIAO9NjfBa1NU7E="/>
         <field:display field="email" id="s_com_aeiou_bigbang_domain_UserAccount_email" object="${useraccount}" z="Wphd9e9VW7ZCR3I3GnXrHNjuxfY="/>
         <field:display field="password" id="s_com_aeiou_bigbang_domain_UserAccount_password" object="${useraccount}" z="jITHy8I1B6Lt6Fd7ojGJuh8j+Vg="/>
