--- a/src/main/webapp/WEB-INF/views/header.jspx
+++ b/src/main/webapp/WEB-INF/views/header.jspx
@@ -3,11 +3,25 @@
  xmlns:util="urn:jsptagdir:/WEB-INF/tags/util" version="2.0">
   <jsp:directive.page contentType="text/html;charset=UTF-8" />
   <jsp:output omit-xml-declaration="yes" />
-
-  <spring:url value="/" var="home"/>
+	
+  <c:choose>
+     <c:when test="${pageContext['request'].userPrincipal != null}">
+  		<spring:url value="/${pageContext['request'].userPrincipal.name}" var="home"/>
+  	 </c:when>
+  	 <c:otherwise>
+  		<spring:url value="/" var="home"/>
+  	 </c:otherwise>
+  </c:choose>
   <span>
     <a href="${home}">
-      <spring:message code="button_home"/>
+	  <c:choose>
+	     <c:when test="${pageContext['request'].userPrincipal != null}">
+      		<spring:message code="button_myhome"/>
+	  	 </c:when>
+	  	 <c:otherwise>
+      		<spring:message code="button_home"/>
+	  	 </c:otherwise>
+	  </c:choose>
     </a>
   </span>
   <c:choose>
@@ -30,6 +44,7 @@
 	    </span>
      </c:otherwise>
   </c:choose>
+  <util:websiteSwitch/>
   <util:theme/>
 
   <spring:url value="/resources/images/springsource-logo.png" var="logo"/>
